hphp/hack/test/typecheck/empty_method_name.php.exp
File "empty_method_name.php", line 4, characters 19-19:
Expected a method name (Parsing[1002])
