hphp/hack/test/typecheck/empty_method_name.php
<?hh // partial

class A {
  public function () : void {}
}
